2006-10-18  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am, configure.in, capplets/keyboard/Makefile.am,
	capplets/keyboard/gnome-keyboard-properties-xkb.c,
	capplets/keyboard/gnome-keyboard-properties-xkb.h,
	capplets/keyboard/gnome-keyboard-properties-xkblt.c,
	capplets/keyboard/gnome-keyboard-properties-xkbmc.c,
	capplets/keyboard/gnome-keyboard-properties-xkbot.c,
	capplets/keyboard/gnome-keyboard-properties-xkbpv.c,
	gnome-settings-daemon/Makefile.am,
	gnome-settings-daemon/gnome-settings-keyboard-xkb.c,
	gnome-settings-daemon/gnome-settings-keyboard-xkb.h,
	schemas/Makefile.am: changing things from libgswitchit/libkbdraw to
	libgnomekbd

2006-10-16  Rodrigo Moya <rodrigo@novell.com>

	* configure.in:
	* NEWS: updated for 2.17.1.

2006-09-04  Rodrigo Moya <rodrigo@novell.com>

	* NEWS: updated for 2.16.0.

2006-08-27  Matthias Clasen <mclasen@redhat.com>

	Fixes #352776

	* libkbdraw/keyboard-drawing.c (key_event): return TRUE when we
	handle the key event, to avoid GTK+ to handle it also.

2006-08-22  Sebastien Bacher <seb128@debian.org>

	* configure.in: updated to 2.16.0

2006-08-22  Sebastien Bacher <seb128@debian.org>

	* NEWS: updated for 2.15.92

2006-08-21  Subhransu Behera  <arya_subhransu@yahoo.co.in>

	* configure.in: Added Oriya (or) to ALL_LINGUAS.

2006-08-08  Sebastien Bacher  <seb128@debian.org>

	* configure.in: updated to 2.15.92

2006-08-07  Sebastien Bacher  <seb128@debian.org>

	* NEWS: updated for 2.15.91

2006-08-07  Sebastien Bacher  <seb128@debian.org>

	* configure.in: require libebook-1.2 1.7.90 for the new API

2006-07-25  Sebastien Bacher  <seb128@debian.org>

	* NEWS:
	* configure.in: updated to 2.15.91

2006-07-24  Sebastien Bacher  <seb128@debian.org>

	* NEWS:
	* configure.in: update for GNOME 2.15.90

2006-07-07  Sven Herzberg  <herzi@gnome-de.org>

	* capplets/display/main.c: added rotation support;
	Closes: #324125

2006-07-06  Sven Herzberg  <herzi@gnome-de.org>
