@@ -1,0 +1,7 @@
+Makefile.in
+Makefile
+*.o
+.deps
+.libs
+.thumbnails
+gnome-control-center
