@@ -1,3 +1,10 @@
+2006-11-13  Rodrigo Moya <rodrigo@novell.com>
+
+	* shell/*: new control center shell.
+
+	* Makefile.am:
+	* configure.in: added new directory to build.
+
 2006-10-18  Sergey Udaltsov <svu@gnome.org>
 
 	* Makefile.am, configure.in, capplets/keyboard/Makefile.am,
